--- a/Web-Automation/.classpath
+++ b/Web-Automation/.classpath
@@ -9,5 +9,29 @@
 	<classpathentry kind="lib" path="Library/selenium/guava-25.0-jre.jar"/>
 	<classpathentry kind="lib" path="Library/selenium/okhttp-3.11.0.jar"/>
 	<classpathentry kind="lib" path="Library/selenium/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/batik-all-1.13.jar"/>
+	<classpathentry kind="lib" path="Library/poi/bcpkix-jdk15on-1.68.jar"/>
+	<classpathentry kind="lib" path="Library/poi/bcprov-jdk15on-1.68.jar"/>
+	<classpathentry kind="lib" path="Library/poi/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="Library/poi/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="Library/poi/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="Library/poi/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="Library/poi/curvesapi-1.06.jar"/>
+	<classpathentry kind="lib" path="Library/poi/fontbox-2.0.22.jar"/>
+	<classpathentry kind="lib" path="Library/poi/graphics2d-0.30.jar"/>
+	<classpathentry kind="lib" path="Library/poi/pdfbox-2.0.22.jar"/>
+	<classpathentry kind="lib" path="Library/poi/poi-5.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/poi-examples-5.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/poi-excelant-5.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/poi-integration-5.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/poi-ooxml-5.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/poi-ooxml-full-5.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/poi-ooxml-lite-5.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/poi-scratchpad-5.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/SparseBitSet-1.2.jar"/>
+	<classpathentry kind="lib" path="Library/poi/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry kind="lib" path="Library/poi/xmlbeans-4.0.0.jar"/>
+	<classpathentry kind="lib" path="Library/poi/xmlgraphics-commons-2.4.jar"/>
+	<classpathentry kind="lib" path="Library/poi/xmlsec-2.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
